c/sedona-tg/src/bindings/x86_64-pc-windows-gnu.rs

unsafe extern "C" {
    pub fn tg_ring_point_at(ring: *const tg_ring, index: ::std::os::raw::c_int) -> tg_point;
}
unsafe extern "C" {
    pub fn tg_ring_points(ring: *const tg_ring) -> *const tg_point;
}
unsafe extern "C" {
    pub fn tg_ring_num_segments(ring: *const tg_ring) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_ring_segment_at(ring: *const tg_ring, index: ::std::os::raw::c_int) -> tg_segment;
}
unsafe extern "C" {
    pub fn tg_ring_convex(ring: *const tg_ring) -> bool;
}
unsafe extern "C" {
    pub fn tg_ring_clockwise(ring: *const tg_ring) -> bool;
}
unsafe extern "C" {
    pub fn tg_ring_index_spread(ring: *const tg_ring) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_ring_index_num_levels(ring: *const tg_ring) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_ring_index_level_num_rects(
        ring: *const tg_ring,
        levelidx: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_ring_index_level_rect(
        ring: *const tg_ring,
        levelidx: ::std::os::raw::c_int,
        rectidx: ::std::os::raw::c_int,
    ) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_ring_nearest_segment(
        ring: *const tg_ring,
        rect_dist: ::std::option::Option<
            unsafe extern "C" fn(
                rect: tg_rect,
                more: *mut ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> f64,
        >,
        seg_dist: ::std::option::Option<
            unsafe extern "C" fn(
                seg: tg_segment,
                more: *mut ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> f64,
        >,
        iter: ::std::option::Option<
            unsafe extern "C" fn(
                seg: tg_segment,
                dist: f64,
                index: ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> bool,
        >,
        udata: *mut ::std::os::raw::c_void,
    ) -> bool;
}
unsafe extern "C" {
    pub fn tg_ring_line_search(
        a: *const tg_ring,
        b: *const tg_line,
        iter: ::std::option::Option<
            unsafe extern "C" fn(
                aseg: tg_segment,
                aidx: ::std::os::raw::c_int,
                bseg: tg_segment,
                bidx: ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> bool,
        >,
        udata: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn tg_ring_ring_search(
        a: *const tg_ring,
        b: *const tg_ring,
        iter: ::std::option::Option<
            unsafe extern "C" fn(
                aseg: tg_segment,
                aidx: ::std::os::raw::c_int,
                bseg: tg_segment,
                bidx: ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> bool,
        >,
        udata: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn tg_ring_area(ring: *const tg_ring) -> f64;
}
unsafe extern "C" {
    pub fn tg_ring_perimeter(ring: *const tg_ring) -> f64;
}
unsafe extern "C" {
    pub fn tg_line_new(points: *const tg_point, npoints: ::std::os::raw::c_int) -> *mut tg_line;
}
unsafe extern "C" {
    pub fn tg_line_new_ix(
        points: *const tg_point,
        npoints: ::std::os::raw::c_int,
        ix: tg_index,
    ) -> *mut tg_line;
}
unsafe extern "C" {
    pub fn tg_line_free(line: *mut tg_line);
}
unsafe extern "C" {
    pub fn tg_line_clone(line: *const tg_line) -> *mut tg_line;
}
unsafe extern "C" {
    pub fn tg_line_copy(line: *const tg_line) -> *mut tg_line;
}
unsafe extern "C" {
    pub fn tg_line_memsize(line: *const tg_line) -> usize;
}
unsafe extern "C" {
    pub fn tg_line_rect(line: *const tg_line) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_line_num_points(line: *const tg_line) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_line_points(line: *const tg_line) -> *const tg_point;
}
unsafe extern "C" {
    pub fn tg_line_point_at(line: *const tg_line, index: ::std::os::raw::c_int) -> tg_point;
}
unsafe extern "C" {
    pub fn tg_line_num_segments(line: *const tg_line) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_line_segment_at(line: *const tg_line, index: ::std::os::raw::c_int) -> tg_segment;
}
unsafe extern "C" {
    pub fn tg_line_clockwise(line: *const tg_line) -> bool;
}
unsafe extern "C" {
    pub fn tg_line_index_spread(line: *const tg_line) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_line_index_num_levels(line: *const tg_line) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_line_index_level_num_rects(
        line: *const tg_line,
        levelidx: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_line_index_level_rect(
        line: *const tg_line,
        levelidx: ::std::os::raw::c_int,
        rectidx: ::std::os::raw::c_int,
    ) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_line_nearest_segment(
        line: *const tg_line,
        rect_dist: ::std::option::Option<
            unsafe extern "C" fn(
                rect: tg_rect,
                more: *mut ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> f64,
        >,
        seg_dist: ::std::option::Option<
            unsafe extern "C" fn(
                seg: tg_segment,
                more: *mut ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> f64,
        >,
        iter: ::std::option::Option<
            unsafe extern "C" fn(
                seg: tg_segment,
                dist: f64,
                index: ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> bool,
        >,
        udata: *mut ::std::os::raw::c_void,
    ) -> bool;
}
unsafe extern "C" {
    pub fn tg_line_line_search(
        a: *const tg_line,
        b: *const tg_line,
        iter: ::std::option::Option<
            unsafe extern "C" fn(
                aseg: tg_segment,
                aidx: ::std::os::raw::c_int,
                bseg: tg_segment,
                bidx: ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> bool,
        >,
        udata: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn tg_line_length(line: *const tg_line) -> f64;
}
unsafe extern "C" {
    pub fn tg_poly_new(
        exterior: *const tg_ring,
        holes: *const *const tg_ring,
        nholes: ::std::os::raw::c_int,
    ) -> *mut tg_poly;
}
unsafe extern "C" {
    pub fn tg_poly_free(poly: *mut tg_poly);
}
unsafe extern "C" {
    pub fn tg_poly_clone(poly: *const tg_poly) -> *mut tg_poly;
}
unsafe extern "C" {
    pub fn tg_poly_copy(poly: *const tg_poly) -> *mut tg_poly;
}
unsafe extern "C" {
    pub fn tg_poly_memsize(poly: *const tg_poly) -> usize;
}
unsafe extern "C" {
    pub fn tg_poly_exterior(poly: *const tg_poly) -> *const tg_ring;
}
unsafe extern "C" {
    pub fn tg_poly_num_holes(poly: *const tg_poly) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_poly_hole_at(poly: *const tg_poly, index: ::std::os::raw::c_int) -> *const tg_ring;
}
unsafe extern "C" {
    pub fn tg_poly_rect(poly: *const tg_poly) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_poly_clockwise(poly: *const tg_poly) -> bool;
}
unsafe extern "C" {
    pub fn tg_env_set_allocator(
        malloc: ::std::option::Option<
            unsafe extern "C" fn(arg1: usize) -> *mut ::std::os::raw::c_void,
        >,
        realloc: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                arg2: usize,
            ) -> *mut ::std::os::raw::c_void,
        >,
        free: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    );
}
unsafe extern "C" {
    pub fn tg_env_set_index(ix: tg_index);
}
unsafe extern "C" {
    pub fn tg_env_set_index_spread(spread: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn tg_env_set_print_fixed_floats(print: bool);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_multibyte_data {
    pub _address: u8,
}
